Fix issue with invisible checkbox height

--- a/src/styles/controls.styl
+++ b/src/styles/controls.styl
@@ -82,6 +82,7 @@
 		position: absolute;
 		display: inline-block;
 		width: auto;
+		height: 10px;
 		opacity: 0;
 		padding: 0;
 
